--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       
         <div class="board">
   <div class="board__img-holder">
-    <img class="board__img" src="img/boards/board-1.png" alt="Board">
+    <img class="board__img" src="./img/boards/board-1.png" alt="Board">
   </div>
   <div class="board-desc">
     <div class="board__cat">Funboards</div>
