--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       
         <div class="board">
   <div class="board__img-holder">
-    <img class="board__img" src="/../../img/boards/board-1.png" alt="Board">
+    <img class="board__img" src="./img/boards/board-1.png" alt="Board">
   </div>
   <div class="board-desc">
     <div class="board__cat">Funboards</div>
@@ -209,7 +209,7 @@
         
       <div class="board">
         <div class="board__img-holder">
-          <img class="board__img" src="img/boards/board-2.png" alt="Board">
+          <img class="board__img" src="./img/boards/board-2.png" alt="Board">
         </div>
         <div class="board-desc">
           <div class="board__cat">Surfboards</div>
@@ -222,7 +222,7 @@
       </div>
         <div class="board">
   <div class="board__img-holder">
-    <img class="board__img" src="img/boards/board-3.png" alt="Board">
+    <img class="board__img" src="./img/boards/board-3.png" alt="Board">
   </div>
   <div class="board-desc">
     <div class="board__cat">Funboards</div>
